[package]
name = "async-gate"
version = "0.2.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["J / Jacob Babich <jacobbabichpublic+git@gmail.com>"]
edition = "2021"
description = "A Tokio-powered asynchronous gate (analogous to a flag and highly inspired by Python's `asyncio.Event`, but can be waited for to become 'false' too)"
categories = ["asynchronous", "concurrency"]
keywords = ["gate", "flag", "async", "tokio", "event"]
repository = "https://github.com/babichjacob/async-gate"

[dependencies]
# TODO: relax version requirement
thiserror = "1.0.47"
# TODO: relax version requirement
tokio = { version = "1.32", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["rt", "macros"] }
tokio-test = { version = "0.4" }
